# takt

./: .shellspec  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  mise.toml  package.yaml  takt.json
.agents/skills/takt-action/: SKILL.md
.agents/skills/takt-getting-started/: SKILL.md
.agents/skills/takt-package/: SKILL.md
.agents/skills/takt-workflow/: SKILL.md
.github/workflows/: release.yml  takt.yml  website.yml
docs/architecture/: takt-datastore.md  takt-foundations.md
docs/research/: mise-swamp-notes.md
e2e/: README.md  action_init_spec.sh  artifact_spec.sh  concepts_spec.sh  generate_action_spec.sh  generate_workflow_spec.sh  init_spec.sh  mcp_spec.sh  options_spec.sh  package_init_spec.sh  run_spec.sh  schema_spec.sh  spec_helper.sh  validate_spec.sh  workflow_init_spec.sh
mise/tasks/ci/: build.sh  fmt.sh  lint.sh  test.sh
mise/tasks/release/: changelog.sh  notes.sh  package.sh  publish.sh
mise/tasks/website/: build.sh
src/: cli.rs  config.rs  core.rs  datastore.rs  domain.rs  execution.rs  lib.rs  main.rs  query.rs  registry.rs  scaffold.rs  store.rs  template.rs
src/cli/: artifact.rs  concepts.rs  generate.rs  init.rs  install.rs  mcp.rs  publish.rs  run.rs  schema.rs  support.rs  validate.rs
src/mcp/: cli.rs  helpers.rs  http.rs  mod.rs  output.rs  params.rs  server.rs
src/output/: mod.rs  style.rs  table.rs
src/output/snapshots/: takt__output__style__tests__style_helpers_match_snapshots.snap  takt__output__table__tests__display_matches_snapshot.snap
templates/bootstrap/: AGENTS.md.tmpl
templates/bootstrap/.agents/skills/takt-action/: SKILL.md
templates/bootstrap/.agents/skills/takt-getting-started/: SKILL.md
templates/bootstrap/.agents/skills/takt-package/: SKILL.md
templates/bootstrap/.agents/skills/takt-workflow/: SKILL.md
templates/bootstrap/handlers/: example.mjs
tests/: install_e2e.rs
website/: aube-lock.yaml  eleventy.config.js  og.config.mjs  package.json  wrangler.jsonc
website/scripts/: og.mjs
website/src/: index.njk  sitemap.njk
website/src/_data/: eleventyComputed.mjs  og.mjs  site.mjs
website/src/_includes/: base.njk
website/src/assets/: style.css
website/worker/: index.js
