[package]
name = "takt"
version = "0.1.0"
edition = "2024"
default-run = "takt"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
comfy-table = "7.1"
console = "0.15"
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-io", "transport-streamable-http-server", "schemars"] }
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["io-std", "macros", "net", "rt-multi-thread"] }

[dev-dependencies]
insta = "1.47.2"
