[package]
name = "takt"
version = "0.1.0"
edition = "2024"
default-run = "takt"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
base64 = "0.22"
blake3 = "1.8"
clap = { version = "4.5", features = ["derive", "env"] }
color-eyre = "0.6"
comfy-table = "7.1"
console = "0.15"
flate2 = "1.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-io", "transport-streamable-http-server", "schemars"] }
schemars = { version = "1.2.1", features = ["derive"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["io-std", "macros", "net", "rt-multi-thread", "time"] }

[dev-dependencies]
insta = "1.47.2"
tempfile = "3.27"
